--- a/quiz.html
+++ b/quiz.html
@@ -9,23 +9,97 @@
   <style>
     /* Minimal styles for swipe cards on the quiz page */
     .swipe-instructions { text-align: center; margin-top: var(--spacing-md); color: var(--color-text-light); }
-    .swipe-stack { display:flex; align-items:center; justify-content:center; min-height:320px; }
-    .swipe-card-wrapper { position:relative; display:flex; align-items:center; justify-content:center; }
+    .swipe-stack { display:flex; align-items:center; justify-content:center; min-height:400px; padding: var(--spacing-xl) 0; }
+    .swipe-card-wrapper { 
+      position:relative; 
+      display:flex; 
+      align-items:center; 
+      justify-content:center; 
+      width: 100%;
+      perspective: 1000px;
+    }
 
-    /* Card with an image area and a white content container pinned to the bottom */
+    /* Card with 3D flip support */
     .swipe-card {
       width:100%;
       max-width:680px;
+      height: 400px;
       border-radius:12px;
       box-shadow:var(--shadow-md);
       overflow:hidden;
       touch-action:none;
       user-select:none;
       will-change:transform;
+      position: relative;
+    }
+
+    .swipe-card__inner {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      transition: transform 0.6s;
+      transform-style: preserve-3d;
+    }
+
+    .swipe-card__inner.is-flipped {
+      transform: rotateY(180deg);
+    }
+
+    .swipe-card__front,
+    .swipe-card__back {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      backface-visibility: hidden;
+      border-radius: 12px;
+      overflow: hidden;
+    }
+
+    .swipe-card__front {
+      display: flex;
+      flex-direction: column;
       background:linear-gradient(180deg, #f5f7fb 0%, #eef2f7 60%);
-      display:flex;
-      flex-direction:column;
-      min-height:320px;
+    }
+
+    .swipe-card__back {
+      transform: rotateY(180deg);
+      background: #ffffff;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: var(--spacing-xl);
+    }
+
+    .swipe-card__back-content {
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      gap: var(--spacing-lg);
+      max-width: 520px;
+      margin: 0 auto;
+      width: 100%;
+    }
+
+    .swipe-card__result-title {
+      font-size: var(--font-size-4xl);
+      margin: 0;
+      font-weight: var(--font-weight-bold);
+      line-height: 1.2;
+    }
+
+    .swipe-card__result-text {
+      font-size: var(--font-size-lg);
+      color: var(--color-text);
+      margin: 0;
+      line-height: var(--line-height-relaxed);
+    }
+
+    .swipe-card__next {
+      justify-self: center;
     }
 
     .swipe-card__image {
@@ -61,6 +135,10 @@
     .quiz-actions { display:flex; gap:var(--spacing-md); justify-content:center; margin-top:var(--spacing-md); }
     .quiz-actions .quiz-option { flex:0 0 160px; max-width:160px; }
     @media (max-width:520px) {
+      .swipe-card { min-height: 280px; }
+      .swipe-card__inner { min-height: 280px; }
+      .swipe-card__result-title { font-size: var(--font-size-3xl); }
+      .swipe-card__back { padding: var(--spacing-lg); }
       .quiz-actions { flex-direction:column; }
       .quiz-actions .quiz-option { flex:1 1 auto; max-width:none; }
     }
