--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       left: 0;
       width: 200%;
       height: 100%;
-      background-image: url("bg-image.png");
+      background-image: url("bg-image.png"), url("bg-image.png");
       background-repeat: repeat-x;
-      background-size: auto 100%;
-      background-position: 0 center;
+      background-size: 50% 100%;
+      background-position: 0 center, 100% center;
       animation: scroll-left 120s linear infinite;
       z-index: 0;
     }
@@ -57,6 +57,8 @@
       display: flex;
       flex-direction: column;
       gap: var(--spacing-lg);
+      align-items: flex-start;
+      text-align: left;
     }
 
     .hero__title {
@@ -64,12 +66,14 @@
       font-weight: var(--font-weight-bold);
       line-height: 1.2;
       margin: 0;
+      text-align: left;
     }
 
     .hero__subtitle {
       font-size: var(--font-size-xl);
       line-height: var(--line-height-relaxed);
       margin: 0;
+      text-align: left;
     }
 
     .hero-image {
