--- a/index.html
+++ b/index.html
@@ -83,6 +83,44 @@
       box-shadow: var(--shadow-lg);
     }
 
+    .hero-slideshow {
+      position: relative;
+      width: 100%;
+      aspect-ratio: 4 / 3;
+      border-radius: var(--border-radius-xl);
+      box-shadow: var(--shadow-lg);
+      overflow: hidden;
+      background: var(--color-bg-alt);
+    }
+
+    .hero-slideshow__image {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
+    }
+
+    .hero-slideshow__image.active {
+      opacity: 1;
+    }
+
+    .hero-slideshow__caption {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      padding: var(--spacing-md) var(--spacing-lg);
+      background: linear-gradient(transparent, rgba(0,0,0,0.7));
+      color: white;
+      font-size: var(--font-size-lg);
+      font-weight: var(--font-weight-bold);
+      text-align: center;
+    }
+
     .btn-pill {
       border-radius: var(--border-radius-full);
       padding: var(--spacing-md) var(--spacing-2xl);
@@ -304,12 +342,14 @@
     <div class="container">
       <div class="hero-split">
         <div class="hero-content">
-          <h1 class="hero__title">Scary? Nope. Just Misunderstood.</h1>
-          <p class="hero__subtitle">Discover the cool truth about the animals everyone fears.</p>
-          <a href="browse.html" class="btn btn--outline btn-pill" style="background-color: rgba(255,255,255,0.2); color: white; border-color: white; align-self: flex-start;">Start Exploring</a>
+          <h1 class="hero__title">Scary? Nope. Just Misunderstood!</h1>
+          <p class="hero__subtitle">These animals aren't as scary as you think. Ready to find out why they're actually awesome?</p>
+          <a href="browse.html" class="btn btn--outline btn-pill" style="background-color: rgba(255,255,255,0.2); color: white; border-color: white; align-self: flex-start;">Let's Go! 🚀</a>
         </div>
         <div class="hero-image-container">
-          <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 600 400'%3E%3Crect width='600' height='400' fill='%2315802b'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Arial' font-size='32' fill='white'%3E🦈 Hero Illustration%3C/text%3E%3C/svg%3E" alt="Hero Illustration" class="hero-image">
+          <div class="hero-slideshow" id="hero-slideshow">
+            <!-- Images will be loaded by JavaScript -->
+          </div>
         </div>
       </div>
     </div>
@@ -318,7 +358,8 @@
   <!-- Featured Animals Section -->
   <section class="section featured-section" aria-labelledby="featured-heading">
     <div class="container">
-      <h2 id="featured-heading" class="text-center mb-xl" style="font-size: var(--font-size-3xl); font-weight: var(--font-weight-bold);">Featured Animals</h2>
+      <div id="progress-container"></div>
+      <h2 id="featured-heading" class="text-center mb-xl" style="font-size: var(--font-size-3xl); font-weight: var(--font-weight-bold);">Meet the Crew! 🦇</h2>
       <div class="grid grid--3 featured-animals" id="featured-animals">
         <!-- Animals will be loaded here by JavaScript -->
         <div class="loading">
@@ -326,7 +367,7 @@
         </div>
       </div>
       <div class="text-center mt-xl">
-        <a href="browse.html" class="btn btn--primary btn--lg" style="border-radius: var(--border-radius-xl);">View All Animals</a>
+        <a href="browse.html" class="btn btn--primary btn--lg" style="border-radius: var(--border-radius-xl);">See All 9 Animals! →</a>
       </div>
     </div>
   </section>
@@ -334,7 +375,7 @@
   <!-- Interactive Habitat Map Section -->
   <section id="habitat-map" class="section section-large" aria-labelledby="habitat-heading">
     <div class="container">
-      <h2 id="habitat-heading" class="text-center mb-xl" style="font-size: var(--font-size-3xl); font-weight: var(--font-weight-bold);">Explore Habitats</h2>
+      <h2 id="habitat-heading" class="text-center mb-xl" style="font-size: var(--font-size-3xl); font-weight: var(--font-weight-bold);">Where Do They Live? 🗺️</h2>
       <div class="map-wrapper">
         <div class="map-container">
           <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/World_map_-_low_resolution.svg" alt="World Habitat Map" class="map-image">
@@ -347,8 +388,9 @@
   <!-- CTA Section -->
   <section class="section cta-simple" aria-labelledby="cta-heading">
     <div class="container">
-      <h2 id="cta-heading" class="cta-title">Ready to play?</h2>
-      <a href="quiz.html" class="btn btn--secondary btn-huge">Start Quiz</a>
+      <h2 id="cta-heading" class="cta-title">Think You Know the Truth? 🤔</h2>
+      <p style="font-size: var(--font-size-lg); margin-bottom: var(--spacing-lg); color: var(--color-text-light);">Test your myth-busting skills and become an Animal Expert!</p>
+      <a href="quiz.html" class="btn btn--secondary btn-huge">Take the Quiz! 🎯</a>
     </div>
   </section>
 
