added card collection and achievements. Created a page for users to use what they collect. Celebration when user gets a card.

--- a/index.html
+++ b/index.html
@@ -315,12 +315,19 @@
             </svg>
             <span>Browse</span>
           </a>
-           <a href="quiz.html" class="main-nav__link">
+          <a href="quiz.html" class="main-nav__link">
             <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
               <path d="M20.5 11H19V7c0-1.1-.9-2-2-2h-4V3.5C13 2.12 11.88 1 10.5 1S8 2.12 8 3.5V5H4c-1.1 0-1.99.9-1.99 2v3.8H3.5c1.49 0 2.7 1.21 2.7 2.7s-1.21 2.7-2.7 2.7H2V20c0 1.1.9 2 2 2h3.8v-1.5c0-1.49 1.21-2.7 2.7-2.7 1.49 0 2.7 1.21 2.7 2.7V22H17c1.1 0 2-.9 2-2v-4h1.5c1.38 0 2.5-1.12 2.5-2.5S21.88 11 20.5 11z"/>
             </svg>
             <span>Quiz</span>
-          </a>          <a href="submit.html" class="main-nav__link">
+          </a>
+          <a href="collection.html" class="main-nav__link">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"/>
+            </svg>
+            <span>Collection</span>
+          </a>
+          <a href="submit.html" class="main-nav__link">
             <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/>
             </svg>
@@ -381,6 +388,15 @@
           <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/World_map_-_low_resolution.svg" alt="World Habitat Map" class="map-image">
           <!-- Map pins will be dynamically rendered by JavaScript from animals.json -->
         </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Card Collection Section -->
+  <section class="section" aria-labelledby="collection-heading">
+    <div class="container">
+      <div id="card-collection-container">
+        <!-- Card collection will be loaded by JavaScript -->
       </div>
     </div>
   </section>
