--- a/quiz.html
+++ b/quiz.html
@@ -234,6 +234,12 @@
             </svg>
             <span>Quiz</span>
           </a>
+          <a href="collection.html" class="main-nav__link">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"/>
+            </svg>
+            <span>Collection</span>
+          </a>
           <a href="submit.html" class="main-nav__link">
             <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/>
