updated the nav bar so that it is the same on each page

--- a/collection.html
+++ b/collection.html
@@ -42,6 +42,12 @@
             </svg>
             <span>Collection</span>
           </a>
+          <a href="submit.html" class="main-nav__link">
+            <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/>
+            </svg>
+            <span>Submit</span>
+          </a>
           <a href="about.html" class="main-nav__link">
             <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"/>
